<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ToggleButton
        android:id="@+id/button1"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentRight="true"
        android:text="" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button1"
        android:textSize="48dp"
        android:text="" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView2"
        android:text="@string/button_clear" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/textView3" />

    <EditText
        android:id="@+id/EditText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/spinner3"
        android:layout_toLeftOf="@+id/button2"
        android:ems="10"
        android:inputType="text" >

    </EditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/EditText4"
        android:text="@string/startwrite" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_below="@+id/button3"
        android:layout_marginTop="48dp"
        android:text="@string/text_writeport"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentLeft="true"
        android:text="@string/text_readport"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView2"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView1" >
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView2"
        android:layout_toLeftOf="@+id/button1" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_above="@+id/TextView2"
        android:layout_toLeftOf="@+id/spinner2"
        android:layout_toRightOf="@+id/textView1" />

</RelativeLayout>