<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/postContentEditorWrapper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone" >
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="false"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="691dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dip" >

            <RelativeLayout
                android:id="@+id/section1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/content_bg"
                android:paddingBottom="10dp" >


                
              <TextView
                    android:id="@+id/textView_config_ioport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_config_ioport"
                    android:textSize="48dp" />
              
              <EditText 
                    android:id="@+id/edittext_config_ioport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView_config_ioport"
                    android:inputType="number"
                    android:layout_marginLeft="100dp"
                    android:textSize="48dp" />
               
               
             <TextView
                    android:id="@+id/textView_config_onofftime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_config_onofftime"
                    android:layout_below="@+id/textView_config_ioport"
                    android:layout_marginTop="100dp"
                    android:textSize="48dp" />
             
              <EditText 
                    android:id="@+id/edittext_config_onofftime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView_config_onofftime"
                    android:layout_below="@+id/textView_config_ioport"
                    android:layout_marginTop="100dp"
                    android:layout_marginLeft="100dp"
                    android:inputType="number"
                    android:textSize="48dp" />
               
               
              <TextView
                    android:id="@+id/textView_config_intervaltime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_config_intervaltime"
                    android:layout_below="@+id/textView_config_onofftime"
                    android:layout_marginTop="100dp"
                    android:textSize="48dp" />
                                
              
              <EditText 
                    android:id="@+id/edittext_config_intervaltime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView_config_intervaltime"
                    android:layout_below="@+id/textView_config_onofftime"
                    android:layout_marginTop="100dp"
                    android:inputType="number"
                    android:layout_marginLeft="100dp"
                    android:textSize="48dp" />
           
              
                
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/section5"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_marginTop="40dp" >

                <Button
                    android:id="@+id/button_open"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:background="@android:drawable/btn_default"
                    android:text="@string/button_openio"
                    android:textSize="48dp" />
                

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>